CWMS-1324: Adjusted source compatibility to VERSION_1_8 and replaced instances of readAllBytes() that is Java 9+ exclusive with com.amazonaws.util.IOUtils.toByteArray()